--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -40,7 +40,7 @@ env:
   ECS_CLUSTER: default-test                 # set this to your Amazon ECS cluster name
   ECS_TASK_DEFINITION: aws-task-definition.json # set this to the path to your Amazon ECS task definition
                                                # file, e.g. .aws/task-definition.json
-  CONTAINER_NAME: bgp-test           # set this to the name of the container in the
+  CONTAINER_NAME: bgp-test-CMS           # set this to the name of the container in the
                                                # containerDefinitions section of your task definition
 
 jobs:
