--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -37,10 +37,10 @@ env:
   AWS_REGION: us-east-1                  # set this to your preferred AWS region, e.g. us-west-1
   ECR_REPOSITORY: bgp-test           # set this to your Amazon ECR repository name
   ECS_SERVICE: bgp-cms-service                 # set this to your Amazon ECS service name
-  ECS_CLUSTER: default-test                 # set this to your Amazon ECS cluster name
+  ECS_CLUSTER: bgp-cms-cluster                 # set this to your Amazon ECS cluster name
   ECS_TASK_DEFINITION: aws-task-definition.json # set this to the path to your Amazon ECS task definition
                                                # file, e.g. .aws/task-definition.json
-  CONTAINER_NAME: bgp-test-CMS           # set this to the name of the container in the
+  CONTAINER_NAME: bgp-cms-app           # set this to the name of the container in the
                                                # containerDefinitions section of your task definition
 
 jobs:
