--- a/ContentManagementSystem/ContentManagementSystem.csproj
+++ b/ContentManagementSystem/ContentManagementSystem.csproj
@@ -4,4 +4,9 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MySql.Data" Version="8.0.27" />
+    <PackageReference Include="AWSSDK.Core" Version="3.7.3.28" />
+    <PackageReference Include="AWSSDK.RDS" Version="3.7.6.3" />
+  </ItemGroup>
 </Project>
